Fix mobile contents overlay with z-index
With the CSS grid change this was broken, likely because of content
order. The higher z-index ensures that the contents overlay appears over
the content.

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -56,11 +56,11 @@ body {
     height 0s;
 
   &.technote-outline-container--visible {
-    height: 100%;
     opacity: 0.98;
     visibility: visible;
     backdrop-filter: blur(10px);
     padding: 1em;
+    z-index: 10;
 
     display: flex;
     align-items: center; /* Vertically centers the content */
